added basic types, authentication middlewares and contexts, plus basic signin and signup process

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,12 @@
       "@components/*": [
         "./src/app/components/*"
       ],
+      "@actions/*": [
+        "./src/app/actions/*"
+      ],
+      "@layouts/*": [
+        "./src/app/layouts/*"
+      ],
       "@db/*": [
         "./src/db/*"
       ]
