--- a/package.json
+++ b/package.json
@@ -22,25 +22,44 @@
     "types": "tsc"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.1.18",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookie": "^1.1.1",
+    "drizzle-orm": "^0.45.1",
+    "immer": "^11.1.3",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.562.0",
+    "next-themes": "^0.4.6",
     "react": "19.3.0-canary-d6cae440-20260106",
     "react-dom": "19.3.0-canary-d6cae440-20260106",
+    "react-hook-form": "^7.71.1",
+    "react-hot-toast": "^2.6.0",
     "react-server-dom-webpack": "19.3.0-canary-d6cae440-20260106",
-    "rwsdk": "1.0.0-beta.48",
+    "rwsdk": "1.0.0-beta.49-test.20260121220325",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "use-immer": "^0.11.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.20.1",
     "@cloudflare/workers-types": "4.20260111.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "~24.10.0",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
+    "drizzle-kit": "^0.31.8",
     "typescript": "5.9.3",
     "vite": "7.3.1",
     "wrangler": "4.58.0"
