--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,35 +1,32 @@
 {
-  "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "linkee",
-  "main": "src/worker.tsx",
-  "compatibility_date": "2025-08-21",
-  "compatibility_flags": [
-    "nodejs_compat"
-  ],
-  "assets": {
-    "binding": "ASSETS"
+	"$schema": "node_modules/wrangler/config-schema.json",
+	"name": "linkee",
+	"main": "src/worker.tsx",
+	"compatibility_date": "2025-08-21",
+	"compatibility_flags": [
+		"nodejs_compat"
+	],
+	"assets": {
+		"binding": "ASSETS"
+	},
+	"observability": {
+		"enabled": true
+	},
+	"migrations": [
+		{
+			"tag": "v1",
+			"new_sqlite_classes": [
+				"Database"
+			],
+		}
+	],
+  "durable_objects": {
+    "bindings": [
+      {
+        "name": "DATABASE",
+        "class_name": "Database",
+      }
+    ]
   },
-  "observability": {
-    "enabled": true
-  },
-  "migrations": [
-    {
-      "tag": "v1",
-      "new_sqlite_classes": [
-        "Database"
-      ]
-    }
-  ],
-  "d1_databases": [
-    {
-      "binding": "DATABASE",
-      "database_id": "5e1515a7-d272-4986-8ca7-1368a862882d"
-    },
-    {
-      "binding": "DB",
-      "database_name": "linkee-enthusiastic-platypus",
-      "database_id": "02a8f9af-e8aa-45f1-b273-153596b9ec7e"
-    }
-  ],
-  "vars": {}
+	"vars": {}
 }
