added one more document root for visitor-facing links

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -34,5 +34,9 @@
 			"binding": "R2"
 		}
 	],
-	"vars": {}
+	"vars": {
+		"WORK_FACTOR": true,
+		"SIGNING_KEY": true,
+		"R2_PUBLIC_URL": true
+	}
 }
