--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.18",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
@@ -42,7 +43,8 @@
     "drizzle-orm": "^0.45.1",
     "immer": "^11.1.3",
     "jsonwebtoken": "^9.0.3",
-    "lucide-react": "^0.562.0",
+    "lucide-react": "^0.563.0",
+    "motion": "^12.29.2",
     "next-themes": "^0.4.6",
     "react": "19.3.0-canary-d6cae440-20260106",
     "react-dom": "19.3.0-canary-d6cae440-20260106",
