--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
     "lucide-react": "^0.563.0",
     "motion": "^12.29.2",
     "next-themes": "^0.4.6",
-    "react": "19.3.0-canary-d6cae440-20260106",
-    "react-dom": "19.3.0-canary-d6cae440-20260106",
+    "react": "^19.3.0-canary-230772f9-20260128",
+    "react-dom": "^19.3.0-canary-230772f9-20260128",
     "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
-    "react-server-dom-webpack": "19.3.0-canary-d6cae440-20260106",
+    "react-server-dom-webpack": "^19.3.0-canary-230772f9-20260128",
     "rwsdk": "^1.0.0-beta.51",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
