fix(redirects): added a reauth procedure with redirection to authentication when needed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,9 @@
       "@layouts/*": [
         "./src/app/layouts/*"
       ],
+      "@cookies/*": [
+        "./src/cookies/*",
+      ],
       "@db/*": [
         "./src/db/*"
       ]
