--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "shadcn": "^3.7.0",
     "typescript": "5.9.3",
     "vite": "7.3.1",
-    "wrangler": "4.58.0"
+    "wrangler": "^4.61.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
