--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "1.20.1",
-    "@cloudflare/workers-types": "4.20260111.0",
+    "@cloudflare/vite-plugin": "^1.23.1",
+    "@cloudflare/workers-types": "^4.20260206.0",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "~24.10.0",
