--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
+    "@posthog/react": "^1.7.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -47,6 +48,7 @@
     "lucide-react": "^0.563.0",
     "motion": "^12.29.2",
     "next-themes": "^0.4.6",
+    "posthog-js": "^1.342.1",
     "react": "^19.3.0-canary-da641178-20260129",
     "react-dom": "^19.3.0-canary-da641178-20260129",
     "react-hook-form": "^7.71.1",
