analytics and enabled the search query on the header (#2)
* feat(analytics): added posthog support

* remove secret keys

* removed sensible google client secrets

* added posthog monitoring

* removed abortcontroller

* added visibility settings on coc on collections to allow them to be marked as public, private or unlisted

* fix(collection): solved ambiguous id issue

* migrated to subqueries to inject settings as an attribute in the row

* fix(privacy): fixed issue on collection page

* added search support with label and description filtering

* feat(motion): added a slight motion on the search result area appearance & disappearance

* fix(search): added visibility filter in the query to prevent private items from being shown in public

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -36,6 +36,7 @@
 	],
 	"vars": {
 		"R2_PUBLIC_URL": "/medias",
-		"WORK_FACTOR": "10"
+		"GOOGLE_AUTH_RETURN_URL": "https://linkee.maxcm.workers.dev/signin/after/google",
+		"GOOGLE_CONNECT_RETURN_URL": "https://linkee.maxcm.workers.dev/profile/connect/google"
 	}
 }
