--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
+    "@posthog/react": "^1.7.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -47,6 +48,8 @@
     "lucide-react": "^0.563.0",
     "motion": "^12.29.2",
     "next-themes": "^0.4.6",
+    "posthog-js": "^1.342.1",
+    "radix-ui": "^1.4.3",
     "react": "^19.3.0-canary-da641178-20260129",
     "react-dom": "^19.3.0-canary-da641178-20260129",
     "react-hook-form": "^7.71.1",
@@ -63,6 +66,7 @@
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.23.1",
     "@cloudflare/workers-types": "^4.20260206.0",
+    "@posthog/types": "^1.342.1",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "~24.10.0",
