--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@redwoodjs/starter",
+  "name": "linkits",
   "version": "1.0.0",
-  "description": "A bare-bones RedwoodSDK starter",
+  "description": "Linkits",
   "main": "index.js",
   "type": "module",
   "keywords": [],
@@ -72,11 +72,13 @@
     "@types/node": "~24.10.0",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
+    "capnweb": "^0.4.0",
     "drizzle-kit": "^0.31.8",
     "shadcn": "^3.7.0",
     "typescript": "5.9.3",
     "vite": "7.3.1",
-    "wrangler": "^4.61.1"
+    "webpack": "^5.105.2",
+    "wrangler": "^4.66.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
