--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -51,7 +51,8 @@
 	"vars": {
 		"R2_PUBLIC_URL": "/medias",
 		"GOOGLE_AUTH_RETURN_URL": "https://linkits.xyz/signin/after/google",
-		"GOOGLE_CONNECT_RETURN_URL": "https://linkits.xyz/profile/connect/google"
+		"GOOGLE_CONNECT_RETURN_URL": "https://linkits.xyz/profile/connect/google",
+		"POSTHOG_PUBLIC_HOST": "https://us.i.posthog.com"
 	},
 	"kv_namespaces": [
 		{
